--- a/pages/reservation-form.html
+++ b/pages/reservation-form.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>values</title>
+  <title>reservation-form</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -15,7 +15,7 @@
 <div class="app">
   <!-- header -->
   <div class="header-footer">
-    What we stand for
+    Reserve our space
   </div>
 
   <div class="container">
@@ -34,38 +34,8 @@
 
     <!-- body text -->
     <div class="row">
-      <div class="col body-content">
-        Mission statement
-      </div>
-    </div>
-
-    <!-- panel -->
-    <div class="row">
-      <div class="col large-text">
-        Value
-      </div>
-      <div class="col">
-        <div class="bordered-content">summary of value's role</div>
-      </div>
-    </div>
-
-    <!-- panel -->
-    <div class="row">
-      <div class="col">
-        <div class="bordered-content">summary of value's role</div>
-      </div>
-      <div class="col large-text">
-        Value
-      </div>
-    </div>
-
-    <!-- panel -->
-    <div class="row">
-      <div class="col large-text">
-        Value
-      </div>
-      <div class="col">
-        <div class="bordered-content">summary of value's role</div>
+      <div class="col bordered-content">
+        embedded google form
       </div>
     </div>
 
