--- a/pages/team.html
+++ b/pages/team.html
@@ -26,7 +26,7 @@
         <button type="button" class="btn btn-secondary" onclick="window.location.href = 'homepage.html';">Home</button>
         <button type="button" class="btn btn-secondary" onclick="window.location.href = 'donate.html';">Donate</button>
         <button type="button" class="btn btn-secondary" onclick="window.location.href = 'team.html';">Meet the team</button>
-        <button type="button" class="btn btn-secondary" onclick="window.location.href = 'volunteer-sign-up.html';">Volunteer with us</button>
+        <button type="button" class="btn btn-secondary" onclick="window.location.href = 'volunteer.html';">Volunteer with us</button>
         <button type="button" class="btn btn-secondary" onclick="window.location.href = 'reservation.html';">Reserve our space</button>
         <button type="button" class="btn btn-secondary" onclick="window.location.href = 'values.html';">What we stand for</button>
       </div>
@@ -34,20 +34,51 @@
 
     <!-- body text -->
     <div class="row">
-      <div class="col body-text">
-        page information
+      <div class="col body-content">
+        short statement on team values
       </div>
     </div>
 
     <!-- panel -->
     <div class="row">
       <div class="col panel-text">
-        panel text
+        staff bio
       </div>
       <div class="col">
-        <div class="image">panel image</div>
+        <div class="bordered-content">staff photo</div>
       </div>
     </div>
+
+    <!-- panel -->
+    <div class="row">
+      <div class="col">
+        <div class="bordered-content">staff photo</div>
+      </div>
+      <div class="col panel-text">
+        staff bio
+      </div>
+    </div>
+
+    <!-- panel -->
+    <div class="row">
+      <div class="col panel-text">
+        staff bio
+      </div>
+      <div class="col">
+        <div class="bordered-content">staff photo</div>
+      </div>
+    </div>
+
+    <!-- panel -->
+    <div class="row">
+      <div class="col">
+        <div class="bordered-content">staff photo</div>
+      </div>
+      <div class="col panel-text">
+        staff bio
+      </div>
+    </div>
+
   </div>
 
   <!-- footer -->
