--- a/pages/volunteer.html
+++ b/pages/volunteer.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>values</title>
+  <title>Volunteer</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -15,11 +15,12 @@
 <div class="app">
   <!-- header -->
   <div class="header-footer">
-    What we stand for
+    Volunteer with us
   </div>
 
   <div class="container">
 
+    <!-- button row -->
     <div class="row">
       <div class="col btn-group" role="group" aria-label="Basic example">
         <button type="button" class="btn btn-secondary" onclick="window.location.href = 'homepage.html';">Home</button>
@@ -31,44 +32,55 @@
       </div>
     </div>
 
+    <div class="row">
+      <div class="col bordered-content">
+        Rotating images of past events
+      </div>
+    </div>
 
     <!-- body text -->
     <div class="row">
       <div class="col body-content">
-        Mission statement
+        Upcoming events
       </div>
     </div>
 
     <!-- panel -->
     <div class="row">
-      <div class="col large-text">
-        Value
+      <div class="col-md-3 panel-text">
+       event description
       </div>
-      <div class="col">
-        <div class="bordered-content">summary of value's role</div>
+
+      <div class="col-md-3 panel-text">
+        <button type="button" class="btn btn-secondary" onclick="window.location.href = 'volunteer-form.html';">Volunteer</button>
       </div>
+
+      <div class="col-md-6">
+        <div class="bordered-content">
+          event image
+        </div>
+      </div>
+
     </div>
 
     <!-- panel -->
     <div class="row">
-      <div class="col">
-        <div class="bordered-content">summary of value's role</div>
-      </div>
-      <div class="col large-text">
-        Value
-      </div>
-    </div>
 
-    <!-- panel -->
-    <div class="row">
-      <div class="col large-text">
-        Value
+      <div class="col-md-6">
+        <div class="bordered-content">
+          event image
+        </div>
       </div>
-      <div class="col">
-        <div class="bordered-content">summary of value's role</div>
-      </div>
-    </div>
 
+      <div class="col-md-3 panel-text">
+        event description
+      </div>
+
+      <div class="col-md-3 panel-text">
+        <button type="button" class="btn btn-secondary" onclick="window.location.href = 'volunteer-form.html';">Volunteer</button>
+      </div>
+
+    </div>
   </div>
 
   <!-- footer -->
