--- a/pages/donate.html
+++ b/pages/donate.html
@@ -26,9 +26,15 @@
         <button type="button" class="btn btn-secondary" onclick="window.location.href = 'homepage.html';">Home</button>
         <button type="button" class="btn btn-secondary" onclick="window.location.href = 'donate.html';">Donate</button>
         <button type="button" class="btn btn-secondary" onclick="window.location.href = 'team.html';">Meet the team</button>
-        <button type="button" class="btn btn-secondary" onclick="window.location.href = 'volunteer-sign-up.html';">Volunteer with us</button>
+        <button type="button" class="btn btn-secondary" onclick="window.location.href = 'volunteer.html';">Volunteer with us</button>
         <button type="button" class="btn btn-secondary" onclick="window.location.href = 'reservation.html';">Reserve our space</button>
         <button type="button" class="btn btn-secondary" onclick="window.location.href = 'values.html';">What we stand for</button>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col body-content">
+        <button type="button" class="btn btn-secondary" onclick="window.location.href = 'https://paypal.com';">Donate here</button>
       </div>
     </div>
 
@@ -38,9 +44,16 @@
         panel text
       </div>
       <div class="col">
-        <div class="image">panel image</div>
+        <div class="bordered-content">panel image</div>
       </div>
     </div>
+
+    <div class="row">
+      <div class="col body-content">
+        <button type="button" class="btn btn-secondary" onclick="window.location.href = 'financial-disclosure.html';">How is my money used?</button>
+      </div>
+    </div>
+
   </div>
 
   <!-- footer -->
