--- a/pages/financial-disclosure.html
+++ b/pages/financial-disclosure.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>values</title>
+  <title>Disclosure</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -15,11 +15,12 @@
 <div class="app">
   <!-- header -->
   <div class="header-footer">
-    What we stand for
+    How our money is spent
   </div>
 
   <div class="container">
 
+    <!-- button row -->
     <div class="row">
       <div class="col btn-group" role="group" aria-label="Basic example">
         <button type="button" class="btn btn-secondary" onclick="window.location.href = 'homepage.html';">Home</button>
@@ -31,44 +32,27 @@
       </div>
     </div>
 
-
     <!-- body text -->
     <div class="row">
       <div class="col body-content">
-        Mission statement
-      </div>
-    </div>
-
-    <!-- panel -->
-    <div class="row">
-      <div class="col large-text">
-        Value
-      </div>
-      <div class="col">
-        <div class="bordered-content">summary of value's role</div>
+        financial philosophy
       </div>
     </div>
 
     <!-- panel -->
     <div class="row">
       <div class="col">
-        <div class="bordered-content">summary of value's role</div>
-      </div>
-      <div class="col large-text">
-        Value
-      </div>
-    </div>
-
-    <!-- panel -->
-    <div class="row">
-      <div class="col large-text">
-        Value
-      </div>
-      <div class="col">
-        <div class="bordered-content">summary of value's role</div>
+        <div class="bordered-content">
+          pie chart of spending
+        </div>
       </div>
     </div>
 
+      <div class="row">
+        <div class="col body-content">
+          last year's budget
+        </div>
+      </div>
   </div>
 
   <!-- footer -->
