--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -31,7 +31,7 @@
         <button type="button" class="btn btn-secondary" onclick="window.location.href = 'homepage.html';">Home</button>
         <button type="button" class="btn btn-secondary" onclick="window.location.href = 'donate.html';">Donate</button>
         <button type="button" class="btn btn-secondary" onclick="window.location.href = 'team.html';">Meet the team</button>
-        <button type="button" class="btn btn-secondary" onclick="window.location.href = 'volunteer-sign-up.html';">Volunteer with us</button>
+        <button type="button" class="btn btn-secondary" onclick="window.location.href = 'volunteer.html';">Volunteer with us</button>
         <button type="button" class="btn btn-secondary" onclick="window.location.href = 'reservation.html';">Reserve our space</button>
         <button type="button" class="btn btn-secondary" onclick="window.location.href = 'values.html';">What we stand for</button>
       </div>
@@ -39,7 +39,7 @@
 
     <!-- main page text -->
     <div class="row">
-      <div class="col body-text">
+      <div class="col body-content">
         information about Best Charity Service
       </div>
     </div>
@@ -50,14 +50,18 @@
         text related to mission/values
       </div>
       <div class="col">
-        <div class="image">cycling images of staff/work</div>
+        <a href="values.html">
+        <div class="bordered-content">cycling images of staff/work</div>
+        </a>
       </div>
     </div>
 
     <!-- volunteer and events -->
     <div class="row">
       <div class="col">
-        <div class="image">Cycling events photos</div>
+        <a href="volunteer.html">
+        <div class="bordered-content">Cycling events photos</div>
+        </a>
       </div>
       <div class="col panel-text">
         text related to events
