--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -18,27 +18,44 @@
     Reserve our space
   </div>
 
-  <!-- body text -->
-  <div class="row">
-    <div class="col body-text">
-      page information
-    </div>
-  </div>
+  <div class="container">
 
-  <!-- panel -->
-  <div class="row">
-    <div class="col panel-text">
-      panel text
+    <!-- button row -->
+    <div class="row">
+      <div class="col btn-group" role="group" aria-label="Basic example">
+        <button type="button" class="btn btn-secondary" onclick="window.location.href = 'homepage.html';">Home</button>
+        <button type="button" class="btn btn-secondary" onclick="window.location.href = 'donate.html';">Donate</button>
+        <button type="button" class="btn btn-secondary" onclick="window.location.href = 'team.html';">Meet the team</button>
+        <button type="button" class="btn btn-secondary" onclick="window.location.href = 'volunteer.html';">Volunteer with us</button>
+        <button type="button" class="btn btn-secondary" onclick="window.location.href = 'reservation.html';">Reserve our space</button>
+        <button type="button" class="btn btn-secondary" onclick="window.location.href = 'values.html';">What we stand for</button>
+      </div>
     </div>
-    <div class="col">
-      <div class="image">panel image</div>
+
+    <!-- body text -->
+    <div class="row">
+      <div class="col bordered-content">
+        Rotating images of space
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col bordered-content">
+        monthly calendar
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col body-content">
+        <button type="button" class="btn btn-secondary" onclick="window.location.href = 'reservation-form.html';">Reserve space</button>
+      </div>
     </div>
   </div>
 
   <!-- footer -->
   <div class="header-footer">
     footer information
-  </div>
+
 </div>
 
 </body>
