add contact page

--- a/pages/reservation-form.html
+++ b/pages/reservation-form.html
@@ -25,7 +25,7 @@
         <button type="button" class="btn btn-secondary" onclick="window.location.href = 'homepage.html';">Home</button>
         <button type="button" class="btn btn-secondary" onclick="window.location.href = 'donate.html';">Donate</button>
         <button type="button" class="btn btn-secondary" onclick="window.location.href = 'team.html';">Meet the team</button>
-        <button type="button" class="btn btn-secondary" onclick="window.location.href = 'about.html';">Who we are</button>
+        <button type="button" class="btn btn-secondary" onclick="window.location.href = 'contact.html';">Contact us</button>
         <button type="button" class="btn btn-secondary" onclick="window.location.href = 'volunteer.html';">Volunteer with us</button>
         <button type="button" class="btn btn-secondary" onclick="window.location.href = 'reservation.html';">Reserve our space</button>
         <button type="button" class="btn btn-secondary" onclick="window.location.href = 'values.html';">What we stand for</button>
