--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>home</title>
   <meta name="description" content="homepage">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -31,7 +31,7 @@
         <button type="button" class="btn btn-secondary" onclick="window.location.href = 'homepage.html';">Home</button>
         <button type="button" class="btn btn-secondary" onclick="window.location.href = 'donate.html';">Donate</button>
         <button type="button" class="btn btn-secondary" onclick="window.location.href = 'team.html';">Meet the team</button>
-        <button type="button" class="btn btn-secondary" onclick="window.location.href = 'about.html';">Who we are</button>
+        <button type="button" class="btn btn-secondary" onclick="window.location.href = 'contact.html';">Contact us</button>
         <button type="button" class="btn btn-secondary" onclick="window.location.href = 'volunteer.html';">Volunteer with us</button>
         <button type="button" class="btn btn-secondary" onclick="window.location.href = 'reservation.html';">Reserve our space</button>
         <button type="button" class="btn btn-secondary" onclick="window.location.href = 'values.html';">What we stand for</button>
