Add class volunteer form to page

--- a/pages/class-form.html
+++ b/pages/class-form.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Our team</title>
+  <title>class-form</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -15,12 +15,11 @@
 <div class="app">
   <!-- header -->
   <div class="header-footer">
-    Team
+    Take our class
   </div>
 
   <div class="container">
 
-    <!-- button row -->
     <div class="row">
       <div class="col btn-group" role="group" aria-label="Basic example">
         <button type="button" class="btn btn-secondary" onclick="window.location.href = 'homepage.html';">Home</button>
@@ -34,50 +33,11 @@
       </div>
     </div>
 
+
     <!-- body text -->
     <div class="row">
-      <div class="col body-content">
-        short statement on team values
-      </div>
-    </div>
-
-    <!-- panel -->
-    <div class="row">
-      <div class="col panel-text">
-        staff bio
-      </div>
-      <div class="col">
-        <div class="bordered-content">staff photo</div>
-      </div>
-    </div>
-
-    <!-- panel -->
-    <div class="row">
-      <div class="col">
-        <div class="bordered-content">staff photo</div>
-      </div>
-      <div class="col panel-text">
-        staff bio
-      </div>
-    </div>
-
-    <!-- panel -->
-    <div class="row">
-      <div class="col panel-text">
-        staff bio
-      </div>
-      <div class="col">
-        <div class="bordered-content">staff photo</div>
-      </div>
-    </div>
-
-    <!-- panel -->
-    <div class="row">
-      <div class="col">
-        <div class="bordered-content">staff photo</div>
-      </div>
-      <div class="col panel-text">
-        staff bio
+      <div class="col bordered-content">
+        embedded google form
       </div>
     </div>
 
