--- a/pages/classes.html
+++ b/pages/classes.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Our team</title>
+  <title>Classes</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -15,7 +15,7 @@
 <div class="app">
   <!-- header -->
   <div class="header-footer">
-    Team
+    Our classes
   </div>
 
   <div class="container">
@@ -34,51 +34,54 @@
       </div>
     </div>
 
+    <div class="row">
+      <div class="col bordered-content">
+        Rotating images of classroom
+      </div>
+    </div>
+
     <!-- body text -->
     <div class="row">
       <div class="col body-content">
-        short statement on team values
+        Classes offered
       </div>
     </div>
 
     <!-- panel -->
     <div class="row">
-      <div class="col panel-text">
-        staff bio
+      <div class="col-md-3 panel-text">
+        class description
       </div>
-      <div class="col">
-        <div class="bordered-content">staff photo</div>
+
+      <div class="col-md-3 panel-text">
+        <button type="button" class="btn btn-secondary" onclick="window.location.href = 'class-form.html';">Take class</button>
       </div>
+
+      <div class="col-md-6">
+        <div class="bordered-content">
+          class image
+        </div>
+      </div>
+
     </div>
 
     <!-- panel -->
     <div class="row">
-      <div class="col">
-        <div class="bordered-content">staff photo</div>
-      </div>
-      <div class="col panel-text">
-        staff bio
-      </div>
-    </div>
 
-    <!-- panel -->
-    <div class="row">
-      <div class="col panel-text">
-        staff bio
+      <div class="col-md-6">
+        <div class="bordered-content">
+          class image
+        </div>
       </div>
-      <div class="col">
-        <div class="bordered-content">staff photo</div>
-      </div>
-    </div>
 
-    <!-- panel -->
-    <div class="row">
-      <div class="col">
-        <div class="bordered-content">staff photo</div>
+      <div class="col-md-3 panel-text">
+        class description
       </div>
-      <div class="col panel-text">
-        staff bio
+
+      <div class="col-md-3 panel-text">
+        <button type="button" class="btn btn-secondary" onclick="window.location.href = 'class-form.html';">Take class</button>
       </div>
+
     </div>
 
   </div>
