--- a/pages/financial-disclosure.html
+++ b/pages/financial-disclosure.html
@@ -28,6 +28,7 @@
         <button type="button" class="btn btn-secondary" onclick="window.location.href = 'team.html';">Meet the team</button>
         <button type="button" class="btn btn-secondary" onclick="window.location.href = 'contact.html';">Contact us</button>
         <button type="button" class="btn btn-secondary" onclick="window.location.href = 'volunteer.html';">Volunteer with us</button>
+        <button type="button" class="btn btn-secondary" onclick="window.location.href = 'classes.html';">Classes we offer</button>
         <button type="button" class="btn btn-secondary" onclick="window.location.href = 'reservation.html';">Reserve our space</button>
         <button type="button" class="btn btn-secondary" onclick="window.location.href = 'values.html';">What we stand for</button>
       </div>
