--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>about</title>
+  <title>contact us</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -21,7 +21,7 @@
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
 <![endif]-->
 <div class="header-footer">
-  Homepage
+  Contact
 </div>
 <div class="container">
 
@@ -49,9 +49,7 @@
   <!-- mission and values -->
   <div class="row">
     <div class="col">
-      <a href="values.html">
         <div class="bordered-content">contact form</div>
-      </a>
     </div>
   </div>
 
