--- a/pages/donate.html
+++ b/pages/donate.html
@@ -43,10 +43,10 @@
     <!-- panel -->
     <div class="row">
       <div class="col panel-text">
-        panel text
+        information about BCS
       </div>
       <div class="col">
-        <div class="bordered-content">panel image</div>
+        <div class="bordered-content">rotating images of work</div>
       </div>
     </div>
 
