add placeholder text to pages

--- a/pages/class-form.html
+++ b/pages/class-form.html
@@ -37,7 +37,9 @@
     <!-- body text -->
     <div class="row">
       <div class="col bordered-content">
-        embedded google form
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeixoc3_D4ONw4VqCHES73FVzOIcBw1Md_gGb5AX_a0G5ZlEA/viewform?embedded=true" width="640" height="716" frameborder="0" marginheight="0" marginwidth="0">
+          Loading…
+        </iframe>
       </div>
     </div>
 
