--- a/pages/classes.html
+++ b/pages/classes.html
@@ -50,7 +50,7 @@
     <!-- panel -->
     <div class="row">
       <div class="col-md-3 panel-text">
-        class description
+        Lorem ipsum dolor sit amet
       </div>
 
       <div class="col-md-3 panel-text">
@@ -75,7 +75,7 @@
       </div>
 
       <div class="col-md-3 panel-text">
-        class description
+        consectetur adipiscing elit
       </div>
 
       <div class="col-md-3 panel-text">
