--- a/pages/contact.html
+++ b/pages/contact.html
@@ -42,14 +42,16 @@
   <!-- main page text -->
   <div class="row">
     <div class="col body-content">
-      information about Best Charity Service
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
     </div>
   </div>
 
   <!-- mission and values -->
   <div class="row">
     <div class="col">
-        <div class="bordered-content">contact form</div>
+        <div class="bordered-content">
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfYapqI_Z6uCWLYEGoSghKDdP47MtPcvewvtKXDY0fEqKVWmg/viewform?embedded=true" width="640" height="677" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        </div>
     </div>
   </div>
 
