--- a/pages/donate.html
+++ b/pages/donate.html
@@ -43,7 +43,7 @@
     <!-- panel -->
     <div class="row">
       <div class="col panel-text">
-        information about BCS
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit
       </div>
       <div class="col">
         <div class="bordered-content">rotating images of work</div>
