--- a/pages/financial-disclosure.html
+++ b/pages/financial-disclosure.html
@@ -37,7 +37,8 @@
     <!-- body text -->
     <div class="row">
       <div class="col body-content">
-        financial philosophy
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua.
       </div>
     </div>
 
