--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -42,14 +42,14 @@
     <!-- main page text -->
     <div class="row">
       <div class="col body-content">
-        information about Best Charity Service
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do iusmod tempor incididunt ut labore et dolore magna aliqua.
       </div>
     </div>
 
     <!-- mission and values -->
     <div class="row">
       <div class="col panel-text">
-        text related to mission/values
+        Nisi quis eleifend quam adipiscing vitae proin sagittis nisl rhoncus
       </div>
       <div class="col">
         <a href="values.html">
@@ -66,7 +66,7 @@
         </a>
       </div>
       <div class="col panel-text">
-        text related to events
+        Neque egestas congue quisque egestas diam in arcu cursus
       </div>
     </div>
 
