--- a/pages/reservation-form.html
+++ b/pages/reservation-form.html
@@ -37,7 +37,7 @@
     <!-- body text -->
     <div class="row">
       <div class="col bordered-content">
-        embedded google form
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSesYE02uG-WQPai4ZN9otj_ISbafhxqcKvnP5dXwmHRjpaFMQ/viewform?embedded=true" width="640" height="1051" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
       </div>
     </div>
 
