--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -43,7 +43,7 @@
 
     <div class="row">
       <div class="col bordered-content">
-        monthly calendar
+        monthly calendar (with reserved days marked off)
       </div>
     </div>
 
