--- a/pages/team.html
+++ b/pages/team.html
@@ -37,14 +37,14 @@
     <!-- body text -->
     <div class="row">
       <div class="col body-content">
-        short statement on team values
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
       </div>
     </div>
 
     <!-- panel -->
     <div class="row">
       <div class="col panel-text">
-        staff bio
+        nulla facilisi nullam vehicula ipsum a arcu cursus
       </div>
       <div class="col">
         <div class="bordered-content">staff photo</div>
@@ -57,14 +57,14 @@
         <div class="bordered-content">staff photo</div>
       </div>
       <div class="col panel-text">
-        staff bio
+        quis vel eros donec ac odio tempor orci
       </div>
     </div>
 
     <!-- panel -->
     <div class="row">
       <div class="col panel-text">
-        staff bio
+        eu ultrices vitae auctor eu augue ut lectus
       </div>
       <div class="col">
         <div class="bordered-content">staff photo</div>
@@ -77,7 +77,7 @@
         <div class="bordered-content">staff photo</div>
       </div>
       <div class="col panel-text">
-        staff bio
+        tempus egestas sed sed risus pretium quam vulputate
       </div>
     </div>
 
