--- a/pages/values.html
+++ b/pages/values.html
@@ -37,7 +37,7 @@
     <!-- body text -->
     <div class="row">
       <div class="col body-content">
-        Mission statement
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
       </div>
     </div>
 
@@ -47,14 +47,18 @@
         Value
       </div>
       <div class="col">
-        <div class="bordered-content">summary of value's role</div>
+        <div class="bordered-content">
+          dolor magna eget est lorem ipsum dolor sit amet consectetur
+        </div>
       </div>
     </div>
 
     <!-- panel -->
     <div class="row">
       <div class="col">
-        <div class="bordered-content">summary of value's role</div>
+        <div class="bordered-content">
+          amet purus gravida quis blandit turpis cursus in hac habitasse
+        </div>
       </div>
       <div class="col large-text">
         Value
@@ -67,7 +71,9 @@
         Value
       </div>
       <div class="col">
-        <div class="bordered-content">summary of value's role</div>
+        <div class="bordered-content">
+          duis tristique sollicitudin nibh sit amet commodo nulla facilisi
+        </div>
       </div>
     </div>
 
