--- a/pages/volunteer-form.html
+++ b/pages/volunteer-form.html
@@ -37,7 +37,9 @@
     <!-- body text -->
     <div class="row">
       <div class="col bordered-content">
-        embedded google form
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe5XgHPFyozG5Q6BdSczHhfTfinIILiP1DRkK-z3_OSC4uO_Q/viewform?embedded=true" width="640" height="708" frameborder="0" marginheight="0" marginwidth="0">
+          Loading…
+        </iframe>
       </div>
     </div>
 
