--- a/pages/volunteer.html
+++ b/pages/volunteer.html
@@ -50,7 +50,7 @@
     <!-- panel -->
     <div class="row">
       <div class="col-md-3 panel-text">
-       event description
+        mattis rhoncus urna neque
       </div>
 
       <div class="col-md-3 panel-text">
@@ -75,7 +75,7 @@
       </div>
 
       <div class="col-md-3 panel-text">
-        event description
+          hendrerit gravida rutrum
       </div>
 
       <div class="col-md-3 panel-text">
